# owl

./: # Iterative OWL Fiction Project: # MATSU.md  .gitignore  OWL_FILE_CREATION_FIX_SUMMARY.md  OWL_LAUNCHER_README.md  README.md  README_ja.md  README_zh.md  arxiv_ps_version_check.py  camel_terminal.txt  check_ps_versions.py  cloudflare_benchmark_results_20250621_154019.json  error_log.txt  extract_and_search_pdf.py  extract_docx.py  extract_docx_content.py  extract_pdf_text.py  extract_pptx_text.py  extract_pptx_text.py.20250426_213751.bak  extraction_attempt.txt  extraction_attempt_2.txt  extraction_instructions.txt  find_longest_boggle_word.py  fractions_and_solutions.txt  github_stats_visualization.py  goopleAPI.env  instruction.txt  learning_journey_cloudflare.json  library_books.txt  links-to-use.txt  llm_related_config.py  matsudaira_first_arc.md  mini_benchmark.py  my_cf_script.py  output.txt.20250426_202834.bak  owl_launcher.py  pyproject.toml  read_docx.py  requirements.txt  retrieve_file_instructions.txt  road_layout.txt.20250426_172243.bak  (+10 more)
.container/: Dockerfile
.devcontainer/: devcontainer.json
camel/agents/: chat_agent.py
examples/: run.py  run_agent_as_tool.py  run_atlascloud.py  run_azure_openai.py  run_claude.py  run_cli.py  run_cloudflare_workers.py  run_cloudflare_workers_fixed_backup.py  run_csv_task.py  run_deepseek.py  run_deepseek_zh.py  run_developer_daemon.py  run_gaia_roleplaying.py  run_gemini.py  run_grok.py  run_groq.py  run_huggingface.py  run_iterative_cloudflare_workers.py  run_llama_maverick.py  run_mini.py  run_minimax.py  run_mistral.py  run_novita_ai.py  run_ollama.py  run_openai_compatible_model.py  run_openrouter.py  run_ppio.py  run_qwen.py  run_qwen_mini_zh.py  run_qwen_zh.py  run_terminal.py  run_terminal_zh.py  run_together_ai.py  run_upgrade.py  run_vllm.py  run_workforce_gpt4o.py
extracted_files/: food_duplicates.md  food_duplicates.xlsx
outputs/: project_summary_20250630_123222.md  setup_repo.sh
owl/: .env_template  alibaba_culture.txt  key_manager.py  webapp.py  webapp_backup.py  webapp_jp.py  webapp_new.py  webapp_zh.py  泡泡玛特品牌介绍.html
prompt_process/: sew_prompt.json
results/: _allvalid_SEW_forder_index2.json  _allvalid_original.json  analysis.py  result_comparison.py
scripts/: backup.sh  restore.sh  test.sh  upgrade.sh
tests/: test_minimax_integration.py  test_minimax_unit.py
utils/: enhanced_chat_agent.py  enhanced_workforce.py
(+788 files in other folders)
